--- a/App/templates/welcome.html
+++ b/App/templates/welcome.html
@@ -13,9 +13,11 @@
                     request.form.number}}">
             <input class="btn btn-default" type="submit" value="Press">
         </form>
-        {% if multiple %}
-            <p class="multiple">{{ multiple }}</p>
-        {% endif %}
+<ol>
+{%for x in range(1, 10)%}
+    <li>{{ num }} X {{ x }} = {{ num*x }}</li>
+{% endfor %}
+</ol>
 
 </body>
 </html>
