--- a/App/templates/id_password.html
+++ b/App/templates/id_password.html
@@ -14,25 +14,12 @@
 <body>
    <h3>shopping list</h3>
    <h4>add</h4>
-   <form action = "{{ url_for('database_add') }}" method = "POST">
+   <form action = "{{ url_for('login_page') }}" method = "POST">
        id<br>
        <input type = "text" name = "id" /></br>
        password<br>
        <input type = "text" name = "password" /><br>
        <input type = "submit" name = "add" /><br>
    </form>
-   <h4>show list</h4>
-   <table border=1 width="600" align="center">
-       <thead>
-       <td>id</td>
-       <td>password</td>
-       </thead>
-   {% for row in rows %}
-       <tr>
-           <td>{{ row["id"] }}</td>
-           <td>{{ row["password"] }}</td>
-       </tr>
-   {% endfor %}
-   </table>
  </body>
 </html>
