--- a/App/templates/login.html
+++ b/App/templates/login.html
@@ -21,7 +21,7 @@
             <br>
         </form>
         <form action="/sign_up/" method="post">
-       <button name="forwardBtn" type="submit">Sing up</button>
+       <button name="forwardBtn" type="submit">Sign up</button>
         </form>
     </div>
 
