--- a/App/templates/shopping_add_result.html
+++ b/App/templates/shopping_add_result.html
@@ -2,6 +2,7 @@
 <html lang="ko">
  <head>
   <meta charset="UTF-8">
+  <meta name="Generator" content="EditPlus">
   <meta name="Author" content="">
   <meta name="Keywords" content="">
   <meta name="Description" content="">
@@ -14,7 +15,7 @@
 <body>
    <h3>shopping list</h3>
    <h4>add</h4>
-   <form action = "{{ url_for('database_add') }}" method = "POST">
+   <form action = "{{ url_for('addrec') }}" method = "POST">
        name<br>
        <input type = "text" name = "item" /></br>
        number<br>
@@ -38,5 +39,11 @@
        </tr>
    {% endfor %}
    </table>
+   <div class="container">
+       <br>
+       <form action="/shopping" method="post">
+          <button name="forwardBtn" type="submit">Go To Shopping list</button>
+       </form>
+   </div>
  </body>
 </html>
