--- a/App/templates/sh_list.html
+++ b/App/templates/sh_list.html
@@ -27,5 +27,9 @@
        </tr>
    {% endfor %}
    </table>
+   <h4>total price: {{ total }}$</h4>
+   <form action = "{{ url_for('money') }}" method = "POST">
+       <button name="forwardBtn" type="submit">Buy All</button>
+   </form>
  </body>
 </html>
